fixed team member modal on mobile

--- a/new.css
+++ b/new.css
@@ -297,7 +297,6 @@ td {
 }
 
 .member-modal-section {
-    min-width: 400px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -313,6 +312,10 @@ td {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.member-form button {
+    margin-left: 20px;
 }
 
 .member-form input {
